Add sbAdmin link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                 <span></span>
             </button>
 
-            <div class="sidebar mbr-white" data-app-modern-menu="true"><a class="text-primary display-7" href="https://mobirise.com">Accueil</a>
+            <div class="sidebar mbr-white" data-app-modern-menu="true"><a class="text-primary display-7" href="https://mobirise.com">Accueil</a> <a class="text-primary display-7" href="https://devgautiersa.github.io/sbAdmin" target="_blank">sbAdmin Template</a>
               <a class="text-primary display-7" href="https://mobirise.com">A propos</a>
               <a class="text-primary display-7" href="https://mobirise.com">Services</a></div>
             
@@ -63,7 +63,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     </button>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="header1 cid-r48T9DhZXn" id="header1-1">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header1 cid-r48T9DhZXn" id="header1-1">
 
     
 
