--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rshpgtuxJy mbr-fullscreen mbr-parallax-background" id="header2-3">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="cid-rshpgtuxJy mbr-fullscreen mbr-parallax-background" id="header2-3">
 
     
 
@@ -77,9 +77,9 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    Welcome to GautierSA Github Pages</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Websites for us and our projects.</h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Hosted directly from your GitHub repository. <br>Just edit, push, and your changes are live.<br><br></p>
+                    Welcome to GautierSA&nbsp;</h1>
+                
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Hosted directly from my GitHub repository. <br>Simple for edit, push, and my changes are live.<br><br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://pages.github.com/">EN SAVOIR PLUS</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://devgautiersa.github.io/sbAdmin" target="_blank">DÉMO LIVE</a></div>
             </div>
